--- a/charts/k8s/templates/etcd-service.yaml
+++ b/charts/k8s/templates/etcd-service.yaml
@@ -10,6 +10,9 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
+  ipFamilyPolicy: SingleStack
+  ipFamilies:
+  - {{ .Values.service.ipFamily }}
   type: ClusterIP
   ports:
     - name: etcd
