--- a/charts/k3s/values.yaml
+++ b/charts/k3s/values.yaml
@@ -110,6 +110,7 @@ annotations: {}
 
 # Service configurations
 service:
+  ipFamily: IPv4
   type: ClusterIP
 
 # Configure the ingress resource that allows you to access the vcluster
