--- a/charts/k8s/templates/api-service.yaml
+++ b/charts/k8s/templates/api-service.yaml
@@ -12,7 +12,11 @@ metadata:
 spec:
   ipFamilyPolicy: SingleStack
   ipFamilies:
-  - {{ .Values.service.ipFamily }}
+  {{- if .Values.ipv6 }}
+  - IPv6
+  {{- else }}
+  - IPv4
+  {{- end }}
   type: ClusterIP
   ports:
     - name: https
