--- a/charts/k8s/values.yaml
+++ b/charts/k8s/values.yaml
@@ -9,6 +9,9 @@ serviceCIDR: "10.96.0.0/12"
 # Make sure to scale up the syncer.replicas, etcd.replicas, api.replicas & controller.replicas
 enableHA: false
 
+# Configure vcluster listening IPv6 instead of IPv4
+ipv6: false
+
 # Syncer configuration
 syncer:
   # Image to use for the syncer
@@ -136,7 +139,6 @@ rbac:
 
 # Service configurations
 service:
-  ipFamily: IPv4
   type: ClusterIP
   
 # PreInstall hook configuration
