--- a/charts/k0s/templates/statefulset.yaml
+++ b/charts/k0s/templates/statefulset.yaml
@@ -82,6 +82,13 @@ spec:
           {{- range $f := .Values.vcluster.extraArgs }}
           - {{ $f | quote }}
           {{- end }}
+          {{- if .Values.ipv6 }}
+          - '--advertise-address=::'
+          - '--bind-address=::'
+          {{- else }}
+          - '--advertise-address=0.0.0.0'
+          - '--bind-address=0.0.0.0'
+          {{- end }}
         env:
 {{ toYaml .Values.vcluster.env | indent 10 }}
         securityContext:
