--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,7 +49,7 @@ jobs:
         uses: crazy-max/ghaction-docker-meta@v2
         with:
           images: |
-            loftsh/vcluster
+            ollijanatuinen/vcluster
           tags: |
             type=semver,pattern={{version}}
             type=raw,value=latest
