test: Use latest Calico and run it on BPF mode

--- a/hack/multi-cluster/calico-felix-config.yaml
+++ b/hack/multi-cluster/calico-felix-config.yaml
@@ -3,7 +3,9 @@ kind: FelixConfiguration
 metadata:
   name: default
 spec:
+  bpfEnabled: true
   bpfLogLevel: ""
+  bpfExternalServiceMode: DSR
   ipipEnabled: true
   logSeverityScreen: Info
   reportingInterval: 0s
