--- a/hack/multi-cluster/kind-cluster2.yaml
+++ b/hack/multi-cluster/kind-cluster2.yaml
@@ -5,6 +5,6 @@ networking:
   apiServerAddress: 127.0.0.12
   apiServerPort: 6443
   disableDefaultCNI: true
-  kubeProxyMode: ipvs
+  kubeProxyMode: none
   podSubnet: 10.2.0.0/16
   serviceSubnet: 10.96.0.0/12
