--- a/charts/eks/values.yaml
+++ b/charts/eks/values.yaml
@@ -135,6 +135,7 @@ syncer:
   kubeConfigContextName: "my-vcluster"
   # Security context configuration
   securityContext: {}
+  targetNamespace: null
 
 # Etcd settings
 etcd:
@@ -327,7 +328,6 @@ init:
 # standards, limit ranges and resource quotas
 isolation:
   enabled: false
-  namespace: null
 
   podSecurityStandard: baseline
 
