--- a/charts/k3s/values.yaml
+++ b/charts/k3s/values.yaml
@@ -120,6 +120,7 @@ syncer:
       cpu: 20m
       memory: 64Mi
   kubeConfigContextName: "my-vcluster"
+  targetNamespace: null
 
 # Virtual Cluster (k3s) configuration
 vcluster:
@@ -305,7 +306,6 @@ coredns:
 # standards, limit ranges and resource quotas
 isolation:
   enabled: false
-  namespace: null
 
   podSecurityStandard: baseline
 
