--- a/charts/k3s/templates/workloadserviceaccount.yaml
+++ b/charts/k3s/templates/workloadserviceaccount.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: vc-workload-{{ .Release.Name }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.syncer.targetNamespace | default .Release.Namespace }}
   labels:
     app: vcluster
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
